<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.14</version>
        <relativePath/> <!-- lookup parent from the repository -->
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.qubic.qx</groupId>
    <artifactId>qx-parent</artifactId>
    <version>1.11.0-SNAPSHOT</version>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>Qubic QX Service</description>
    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>

        <commons-collections4.version>4.5.0</commons-collections4.version>
        <embedded-redis.version>1.4.3</embedded-redis.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <okhttp3-mockserver.version>5.2.1</okhttp3-mockserver.version>
        <qubicj.version>1.10.0-SNAPSHOT</qubicj.version>
        <resilience4j.version>2.2.0</resilience4j.version>
        <springdoc.version>2.8.13</springdoc.version>
        <testcontainers-redis.version>2.2.2</testcontainers-redis.version>

        <!-- vulnerablity overrides -->
        <commons-lang3.version>3.20.0</commons-lang3.version> <!-- 3.17.0 is vulnerable -->
        <commons-compress.version>[1.28.0,)</commons-compress.version> <!-- 1.24 is vulnerable -->

    </properties>

    <modules>
        <module>qx-sync</module>
        <module>qx-api</module>
    </modules>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>at.qubic</groupId>
                <artifactId>qubicj-computor-api</artifactId>
                <version>${qubicj.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-bulkhead</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-reactor</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>

            <!-- mapstruct and lombok don't work together nicely -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <version>${lombok-mapstruct-binding.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>

            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>mockwebserver</artifactId>
                <version>${okhttp3-mockserver.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.redis</groupId>
                <artifactId>testcontainers-redis</artifactId>
                <version>${testcontainers-redis.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- we could use testcontainers instead of embedded redis -->
            <dependency>
                <groupId>com.github.codemonstur</groupId>
                <artifactId>embedded-redis</artifactId>
                <version>${embedded-redis.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <excludedGroups>SIT,MANUAL</excludedGroups>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>
